arranged minimal repro for reporting the issue

--- a/FromHeaderBindingIssue/FromHeaderBindingIssue.csproj
+++ b/FromHeaderBindingIssue/FromHeaderBindingIssue.csproj
@@ -11,8 +11,8 @@
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.2" />
 		<PackageReference Include="Asp.Versioning.Http" Version="8.0.0" />
 		<PackageReference Include="Asp.Versioning.Mvc.ApiExplorer" Version="8.0.0" />
-		<!-- <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" /> -->
-		<PackageReference Include="DotSwashbuckle.AspNetCore" Version="3.0.8" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+		<!-- <PackageReference Include="DotSwashbuckle.AspNetCore" Version="3.0.8" /> -->
 	</ItemGroup>
 
 </Project>
